Fix issue with clicking on stack trace collapsing entire test

--- a/packages/reporter/src/runnables/runnables.scss
+++ b/packages/reporter/src/runnables/runnables.scss
@@ -45,6 +45,7 @@
       white-space: pre-wrap;
       word-break: break-word;
       user-select: initial;
+      overflow: auto;
     }
 
     .runnable-err-header {
